--- a/index.html
+++ b/index.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cfc97c9f42.js" crossorigin="anonymous"></script>
     <title>Shuangjie Xia</title>
 </head>
+
 <body>
     <header>
+        <div id="home">
+            <h1>Shuangjie Xia, Full-Stack Developer</h1>
+        </div>
         <nav>
             <ul>
-                <li>Hi</li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <main>
+        <div>
+            <h1>Hi! 😃</h1>
+            <p>I'm Shuangjie, a Full-Stack developer in beautiful Barcelona.</p>
+            <p> My passion lies in improving, communication and learning about the latest technologies.</p>
+        </div>
+
+        <div>
+            <h2>Experience</h2>
+            <p>Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4"> INS Mare de
+                    Déu de la Mercè</a> that focuses Web Application D  evelopment.</p>
+        </div>
+
+        <div>
+            <h2>Skills</h2>
+        </div>
+        <div>
+            <h2>Front-End</h2>
+            <div>
+                <i class="fab fa-html5 html"></i>
+                <i class="fab fa-css3-alt css"></i>
+                <i class="fab fa-js js"></i>
+            </div>
+        </div>
+        <div>
+            <h2>Back-End</h2>
+            <div>
+                <i class="fab fa-java"></i>
+                <i class="fab fa-php php"></i>
+                <i class="fab fa-python"></i>
+            </div>
+        </div>
+        <div>
+            <h2>Frameworks</h2>
+            <div>
+                <i class="fab fa-laravel laravel"></i>
+                <i class="fab fa-vuejs vue"></i>
+                <i class="fab fa-react react"></i>
+                <i class="fab fa-bootstrap bootsrap"></i>
+            </div>
+        </div>
+        <div>
+            <h2>Developments tools</h2>
+            <div>
+                <i class="fab fa-git-alt git"></i>
+                <i class="fab fa-github"></i>
+                <i class="fab fa-gitkraken gitkraken"></i>
+                <i class="fab fa-npm npm"></i>
+            </div>
+        </div>
+        <hr>
+        <div id="contact">
+            <p class="contact">You can contact me directly on <span class="email">9.12716135xia@gmail.com</span> and I will answer as soon as possible! </p>
+        </div>
+    </main>
+
+    <footer>
+        <p>@Created by  <span class="creator">Shuangjie Xia 2020</span></p>
+    </footer>
 </body>
+
 </html>
