--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div>
             <h2>Experience</h2>
-            <p>Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4"> INS Mare de
+            <p title="Hi!">Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4"> INS Mare de
                     Déu de la Mercè</a> that focuses Web Application D  evelopment.</p>
         </div>
 
@@ -42,35 +42,36 @@
         <div>
             <h2>Front-End</h2>
             <div>
-                <i class="fab fa-html5 html"></i>
-                <i class="fab fa-css3-alt css"></i>
-                <i class="fab fa-js js"></i>
+                <i class="fab fa-html5 html" title="HTML"></i>
+                <i class="fab fa-css3-alt css" title="CSS"></i>
+                <i class="fab fa-js js" title="Javascript"></i>
             </div>
         </div>
         <div>
             <h2>Back-End</h2>
             <div>
-                <i class="fab fa-java"></i>
-                <i class="fab fa-php php"></i>
-                <i class="fab fa-python"></i>
+                <i class="fab fa-java" title="JAVA"></i>
+                <i class="fab fa-php php" title="PHP"></i>
+                <i class="fab fa-python" title="PYTHON"></i>
+                <i class="fab fa-node-js node" title="NODE.JS"></i>
             </div>
         </div>
         <div>
             <h2>Frameworks</h2>
             <div>
-                <i class="fab fa-laravel laravel"></i>
-                <i class="fab fa-vuejs vue"></i>
-                <i class="fab fa-react react"></i>
-                <i class="fab fa-bootstrap bootsrap"></i>
+                <i class="fab fa-laravel laravel" title="LARAVEL"></i>
+                <i class="fab fa-vuejs vue" title="VUE"></i>
+                <i class="fab fa-react react" title="REACT"></i>
+                <i class="fab fa-bootstrap bootstrap" title="Bootstrap"></i>
             </div>
         </div>
         <div>
             <h2>Developments tools</h2>
             <div>
-                <i class="fab fa-git-alt git"></i>
-                <i class="fab fa-github"></i>
-                <i class="fab fa-gitkraken gitkraken"></i>
-                <i class="fab fa-npm npm"></i>
+                <i class="fab fa-git-alt git" title="GIT"></i>
+                <i class="fab fa-github" title="GITHUB"></i>
+                <i class="fab fa-gitkraken gitkraken" title="GITKRAKEN"></i>
+                <i class="fab fa-npm npm" title="NPM"></i>
             </div>
         </div>
         <hr>
