Title fade in animation completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div id="home">
+        <div id="home" class="title">
             <h1>Shuangjie Xia, Full-Stack Developer</h1>
         </div>
         <nav>
@@ -32,8 +32,9 @@
 
         <div>
             <h2>Experience</h2>
-            <p title="Hi!">Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4"> INS Mare de
-                    Déu de la Mercè</a> that focuses Web Application D  evelopment.</p>
+            <p title="Hi!">Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4">
+                    INS Mare de
+                    Déu de la Mercè</a> that focuses Web Application D evelopment.</p>
         </div>
 
         <div>
@@ -41,48 +42,99 @@
         </div>
         <div>
             <h2>Front-End</h2>
-            <div>
-                <i class="fab fa-html5 html" title="HTML"></i>
-                <i class="fab fa-css3-alt css" title="CSS"></i>
-                <i class="fab fa-js js" title="Javascript"></i>
+            <div class="skills">
+                <div>
+                    <i class="fab fa-html5 html" title="HTML"></i>
+                    <p>HTML</p>
+                </div>
+                <div>
+                    <i class="fab fa-css3-alt css" title="CSS"></i>
+                    <p>CSS</p>
+                </div>
+                <div>
+                    <i class="fab fa-js js" title="Javascript"></i>
+                    <p>Javascript</p>
+                </div>
             </div>
         </div>
         <div>
             <h2>Back-End</h2>
-            <div>
-                <i class="fab fa-java" title="JAVA"></i>
-                <i class="fab fa-php php" title="PHP"></i>
-                <i class="fab fa-python" title="PYTHON"></i>
-                <i class="fab fa-node-js node" title="NODE.JS"></i>
+            <div class="skills">
+                <div>
+                    <i class="fab fa-java" title="JAVA"></i>
+                    <p>JAVA</p>
+                </div>
+                <div>
+                    <i class="fab fa-php php" title="PHP"></i>
+                    <p>PHP</p>
+                </div>
+
+                <div>
+                    <i class="fab fa-python" title="PYTHON"></i>
+                    <p>PYTHON</p>
+                </div>
+
+                <div>
+                    <i class="fab fa-node-js node" title="NODE.JS"></i>
+                    <p>NODE.JS</p>
+                </div>
+
             </div>
         </div>
         <div>
             <h2>Frameworks</h2>
-            <div>
-                <i class="fab fa-laravel laravel" title="LARAVEL"></i>
-                <i class="fab fa-vuejs vue" title="VUE"></i>
-                <i class="fab fa-react react" title="REACT"></i>
-                <i class="fab fa-bootstrap bootstrap" title="Bootstrap"></i>
+            <div class="skills">
+                <div>
+                    <i class="fab fa-laravel laravel" title="LARAVEL"></i>
+                    <p>LARAVEL</p>
+                </div>
+                <div>
+                    <i class="fab fa-vuejs vue" title="VUE"></i>
+                    <p>VUE</p>
+                </div>
+                <div>
+                    <i class="fab fa-react react" title="REACT"></i>
+                    <p>REACT</p>
+                </div>
+                <div>
+                    <i class="fab fa-bootstrap bootstrap" title="Bootstrap"></i>
+                    <p>Bootstrap</p>
+                </div>
             </div>
         </div>
         <div>
             <h2>Developments tools</h2>
-            <div>
-                <i class="fab fa-git-alt git" title="GIT"></i>
-                <i class="fab fa-github" title="GITHUB"></i>
-                <i class="fab fa-gitkraken gitkraken" title="GITKRAKEN"></i>
-                <i class="fab fa-npm npm" title="NPM"></i>
+            <div class="skills">
+                <div>
+                    <i class="fab fa-git-alt git" title="GIT"></i>
+                    <p>GIT</p>
+                </div>
+                <div>
+                    <i class="fab fa-github" title="GITHUB"></i>
+                    <p>GITHUB</p>
+                </div>
+                <div>
+                    <i class="fab fa-gitkraken gitkraken" title="GITKRAKEN"></i>
+                    <p>GITKRAKEN</p>
+                </div>
+                <div>
+                    <i class="fab fa-npm npm" title="NPM"></i>
+                    <p>NPM</p>
+                </div>
             </div>
         </div>
         <hr>
         <div id="contact">
-            <p class="contact">You can contact me directly on <span class="email">9.12716135xia@gmail.com</span> and I will answer as soon as possible! </p>
+            <p class="contact">You can contact me directly on <span class="email">9.12716135xia@gmail.com</span> and I
+                will answer as soon as possible! </p>
         </div>
     </main>
 
     <footer>
-        <p>@Created by  <span class="creator">Shuangjie Xia 2020</span></p>
+        <p>@Created by <span class="creator">Shuangjie Xia 2020</span></p>
     </footer>
+
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
