--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/cfc97c9f42.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/69e47e7df4.js" crossorigin="anonymous"></script>
+    <script src="./js/main.js" defer></script>
     <title>Shuangjie Xia</title>
 </head>
 
@@ -27,14 +28,26 @@
         <div>
             <h1>Hi! 😃</h1>
             <p>I'm Shuangjie, a Full-Stack developer in beautiful Barcelona.</p>
-            <p> My passion lies in improving, communication and learning about the latest technologies.</p>
+            <p>
+                My passion is in improving, communicating, and learning about the latest technologies.
+            </p>
+            <p>Also like problem solving and sharing content with people.</p>
+            <p>Use <b>TDD</b> practice to help me write the right, robust and well-tested code. Try to achieve the <b>SOLID</b> principle.</p>
         </div>
 
         <div>
             <h2>Experience</h2>
-            <p title="Hi!">Currently I am student on <a href="https://tot.infomerce.es/course/index.php?categoryid=4">
-                    INS Mare de
-                    Déu de la Mercè</a> that focuses Web Application Development.</p>
+            <p title="INS Mare de Déu de la Mercè">
+                Graduate from
+                <a href="https://tot.infomerce.es/course/index.php?categoryid=4">
+                    INS Mare de Déu de la Mercè</a>
+                focuses on Web Application Development.
+            </p>
+            <p title="FactoríaF5">
+                Studied on
+                <a href="https://factoriaf5.org/">FactoríaF5</a>
+                as a Full-Stack developer 1000 hours
+            </p>
         </div>
 
         <div>
@@ -44,15 +57,15 @@
             <h2>Front-End</h2>
             <div class="skills">
                 <div>
-                    <i class="fab fa-html5 html" title="HTML"></i>
+                    <i class="fab fa-html5 html"></i>
                     <p>HTML</p>
                 </div>
                 <div>
-                    <i class="fab fa-css3-alt css" title="CSS"></i>
+                    <i class="fab fa-css3-alt css"></i>
                     <p>CSS</p>
                 </div>
                 <div>
-                    <i class="fab fa-js js" title="Javascript"></i>
+                    <i class="fab fa-js js"></i>
                     <p>Javascript</p>
                 </div>
             </div>
@@ -61,43 +74,42 @@
             <h2>Back-End</h2>
             <div class="skills">
                 <div>
-                    <i class="fab fa-java" title="JAVA"></i>
+                    <i class="fa-brands fa-java"></i>
                     <p>JAVA</p>
                 </div>
                 <div>
-                    <i class="fab fa-php php" title="PHP"></i>
+                    <i class="fab fa-php php"></i>
                     <p>PHP</p>
                 </div>
 
                 <div>
-                    <i class="fab fa-python" title="PYTHON"></i>
+                    <i class="fab fa-python"></i>
                     <p>PYTHON</p>
                 </div>
 
                 <div>
-                    <i class="fab fa-node-js node" title="NODE.JS"></i>
+                    <i class="fab fa-node-js node"></i>
                     <p>NODE.JS</p>
                 </div>
-
             </div>
         </div>
         <div>
             <h2>Frameworks</h2>
             <div class="skills">
                 <div>
-                    <i class="fab fa-laravel laravel" title="LARAVEL"></i>
+                    <i class="fab fa-laravel laravel"></i>
                     <p>LARAVEL</p>
                 </div>
                 <div>
-                    <i class="fab fa-vuejs vue" title="VUE"></i>
+                    <i class="fab fa-vuejs vue"></i>
                     <p>VUE</p>
                 </div>
                 <div>
-                    <i class="fab fa-react react" title="REACT"></i>
+                    <i class="fab fa-react react"></i>
                     <p>REACT</p>
                 </div>
                 <div>
-                    <i class="fab fa-bootstrap bootstrap" title="Bootstrap"></i>
+                    <i class="fab fa-bootstrap bootstrap"></i>
                     <p>Bootstrap</p>
                 </div>
             </div>
@@ -106,35 +118,42 @@
             <h2>Developments tools</h2>
             <div class="skills">
                 <div>
-                    <i class="fab fa-git-alt git" title="GIT"></i>
+                    <i class="fa-brands fa-docker"></i>
+                    <p>Docker</p>
+                    </i>
+                </div>
+                <div>
+                    <i class="fa-brands fa-linux"></i>
+                    <p>Linux</p>
+                    </i>
+                </div>
+                <div>
+                    <i class="fab fa-git-alt git"></i>
                     <p>GIT</p>
                 </div>
                 <div>
-                    <i class="fab fa-github" title="GITHUB"></i>
+                    <i class="fab fa-github"></i>
                     <p>GITHUB</p>
                 </div>
                 <div>
-                    <i class="fab fa-gitkraken gitkraken" title="GITKRAKEN"></i>
-                    <p>GITKRAKEN</p>
-                </div>
-                <div>
-                    <i class="fab fa-npm npm" title="NPM"></i>
+                    <i class="fab fa-npm npm"></i>
                     <p>NPM</p>
                 </div>
             </div>
         </div>
-        <hr>
+        <hr />
         <div id="contact">
-            <p class="contact">You can contact me directly on <span class="email">9.12716135xia@gmail.com</span> and I
-                will answer as soon as possible! </p>
+            <p class="contact">
+                You can contact me directly at 
+                <span class="email">9.12716135xia@gmail.com</span> and I will answer
+                as soon as possible!
+            </p>
         </div>
     </main>
 
     <footer>
-        <p>@Created by <span class="creator">Shuangjie Xia 2020</span></p>
+        <p>@Created by <span class="creator">Shuangjie Xia 2020-</span></p>
     </footer>
-
-    <script src="./js/main.js"></script>
 </body>
 
 </html>
