Add LinkedIn contact

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 My passion is in improving, communicating, and learning about the latest technologies.
             </p>
             <p>Also like problem solving and sharing content with people.</p>
-            <p>Use <b>TDD</b> practice to help me write the right, robust and well-tested code. Try to achieve the <b>SOLID</b> principle.</p>
+            <p>Use <b>TDD</b> practice to help me write the right, robust and well-tested code. Try to achieve the
+                <b>SOLID</b> principle.</p>
         </div>
 
         <div>
@@ -144,9 +145,10 @@
         <hr />
         <div id="contact">
             <p class="contact">
-                You can contact me directly at 
-                <span class="email">9.12716135xia@gmail.com</span> and I will answer
-                as soon as possible!
+                You can contact me directly at
+                <span class="email">9.12716135xia@gmail.com</span> or on
+                <span class="linkedIn"><a href="https://www.linkedin.com/in/shuangjie-xias/">LinkedIn</a></span>
+                and I will answer as soon as possible!
             </p>
         </div>
     </main>
