Add color for Docker icon + formatting css

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h2>Developments tools</h2>
             <div class="skills">
                 <div>
-                    <i class="fa-brands fa-docker"></i>
+                    <i class="fa-brands fa-docker docker"></i>
                     <p>Docker</p>
                     </i>
                 </div>
